--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+  <link rel="stylesheet" href="styles.css" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Frontend Roadmap</title>
@@ -11,9 +12,9 @@
     <h1>Frontend Roadmap</h1>
     <nav>
       <ul>
-        <li>Inicio</li>
-        <li>Sobre mí</li>
-        <li>Contacto</li>
+        <li><a href="#inicio">Inicio</a></li>
+        <li><a href="enlaces/sobre_mi.html" target="_blank"> Sobre mí</a></li>
+        <li> <a href="#contacto">Contacto</a></li>
       </ul>
     </nav>
   </header>
@@ -31,6 +32,9 @@
       </article>
       <article>
         <p>Usar Git y GitHub</p>
+        <a href="https://github.com/pablomolinaa9" target="_blank" rel="noopener noreferrer">
+  Mi GitHub
+</a>
       </article>
     </section>
 
